--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <i class="fas fa-hands mr-2"></i> Gesticulate
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="pose3" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-person-shrug mr-2"></i> Whatever
+                            <i class="fa-solid fa-hand-holding mr-2"></i> Whatever
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="hug" onclick="sendPresetCommand(this)">
                             <i class="fas fa-hands mr-2"></i> Hug
@@ -52,13 +52,13 @@
                             <i class="fas fa-handshake mr-2"></i> Handshake
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="goodbye" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-hand-wave mr-2"></i> Goodbye
+                            <i class="fas fa-hand-paper mr-2"></i> Goodbye
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="nod" onclick="sendPresetCommand(this)">
                             <i class="fas fa-head-side-cough mr-2"></i> Nod
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="applause" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-hands-clap mr-2"></i> Clap
+                            <i class="fa-solid fa-hands-clapping mr-2"></i> Clap
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="zhuatou" onclick="sendPresetCommand(this)">
                             <i class="fas fa-head-side-mask mr-2"></i> Scratch head
@@ -130,8 +130,22 @@
                     </div>
                 </div>
                 <div class="bg-white p-4 rounded shadow">
-                    <h2 class="text-xl font-bold mb-2">Speech</h2>
-                    <textarea class="w-full max-w-lg p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" rows="5" placeholder="Enter your text here"></textarea>
+                    <h2 class="text-xl font-bold mb-4">Navigate</h2>
+                    <div class="flex flex-wrap">
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                          <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="coordinateX" type="text" placeholder="x">
+                        </div>
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                          <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="coordinateY" type="text" placeholder="y">
+                        </div>
+                        <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
+                          <input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="coordinateTheta" type="text" placeholder="theta">
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <h2 class="text-xl font-bold mb-4">Speech</h2>
+                    <textarea class="w-full max-w-lg p-2 bg-gray-200 text-gray-700 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500" rows="5" placeholder="Enter your text here"></textarea>
                 </div>
             </section>
         </div>
