--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>WebSocket Client</title>
 </head>
 <body class="bg-gray-100 text-gray-900">
@@ -24,16 +25,7 @@
                 <section class="w-full bg-white p-4 rounded shadow">
                     <video id="remoteVideo" tabindex="0" autoplay playsinline class="w-full h-128 bg-gray-200" style="outline: none"></video>
                 </section>
-                <section class="w-full bg-white p-4 rounded shadow mt-4">
-                    <h2 class="text-xl font-bold mb-4">Log</h2>
-                    <div class="text-gray-700" id="messages"></div>
-                </section>
-            </div>
-            
-
-            <!-- Cards -->
-            <section class="grid grid-cols-1 gap-4">
-                <div class="bg-white p-4 rounded shadow">
+                <section class="w-full mt-4 bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-2">Preset action</h2>
                     <div class="flex flex-wrap items-center">
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="pose1" onclick="sendPresetCommand(this)">
@@ -46,7 +38,7 @@
                             <i class="fa-solid fa-hand-holding mr-2"></i> Whatever
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="hug" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-hands mr-2"></i> Hug
+                            <i class="fa-solid fa-heart mr-2"></i> Hug
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="shankhand" onclick="sendPresetCommand(this)">
                             <i class="fas fa-handshake mr-2"></i> Handshake
@@ -55,13 +47,13 @@
                             <i class="fas fa-hand-paper mr-2"></i> Goodbye
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="nod" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-head-side-cough mr-2"></i> Nod
+                            <i class="fa-solid fa-thumbs-up mr-2"></i> Nod
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="applause" onclick="sendPresetCommand(this)">
                             <i class="fa-solid fa-hands-clapping mr-2"></i> Clap
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="zhuatou" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-head-side-mask mr-2"></i> Scratch head
+                            <i class="fa-solid fa-face-meh mr-2"></i> Scratch head
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="guideright" onclick="sendPresetCommand(this)">
                             <i class="fas fa-arrow-right mr-2"></i> Walk right
@@ -79,7 +71,7 @@
                             <i class="fas fa-arrow-up mr-2"></i> Grow
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="swingarm" onclick="sendPresetCommand(this)">
-                            <i class="fas fa-arrows-alt mr-2"></i> Swing arms
+                            <i class="fa-solid fa-child-reaching mr-2"></i> Swing arms
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="searching" onclick="sendPresetCommand(this)">
                             <i class="fas fa-search mr-2"></i> Search
@@ -118,6 +110,28 @@
                             <i class="fas fa-undo mr-2"></i> Reset
                         </button>
                     </div>
+                </section>
+            </div>
+            
+
+            <!-- Cards -->
+            <section class="grid grid-cols-1 gap-4">
+                <div class="bg-white p-4 rounded shadow">
+                    <h2 class="text-xl font-bold mb-4">Map</h2>
+                    <div id="image-container" class="w-full">
+                        <img class="w-full" id="map" src="static/kinect.png" alt="Map">
+                    </div>
+                    <div id="coordinates">
+                        Point coordinates: <span id="coord-output">None</span>
+                    </div>
+                    <div class="flex">
+                        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="localizeBtn">
+                            <i class="fas fa-arrows-alt mr-2"></i> Localize
+                        </button>
+                        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="navBtn">
+                            <i class="fa-solid fa-location-dot mr-2"></i> Navigate
+                        </button>
+                    </div>
                 </div>
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-4">Expression</h2>
@@ -146,6 +160,10 @@
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-4">Speech</h2>
                     <textarea class="w-full max-w-lg p-2 bg-gray-200 text-gray-700 border border-gray-200 rounded focus:outline-none focus:bg-white focus:border-gray-500" rows="5" placeholder="Enter your text here"></textarea>
+                </div>
+                <div class="bg-white p-4 rounded shadow">
+                    <h2 class="text-xl font-bold mb-4">Log</h2>
+                    <div class="text-gray-700" id="messages"></div>
                 </div>
             </section>
         </div>
