--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <title>WebSocket Client</title>
 </head>
 <body class="bg-gray-100 text-gray-900">
@@ -170,5 +170,5 @@
     </main>
 </body>
 <script src="https://cdn.tailwindcss.com"></script>
-<script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="scripts/main.js"></script>
 </html>
