--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="static/style.css">
     <title>WebSocket Client</title>
 </head>
-<body class="bg-gray-100 text-gray-900">
+<body class="bg-gray-100 text-gray-900" onload="initPage()">
     <header class="bg-gray-700 text-white p-4 flex items-center">
         <h1 class="text-2xl font-bold mr-8">WebSocket Client</h1>
         <div class="flex items-center">
@@ -118,10 +118,8 @@
             <section class="grid grid-cols-1 gap-4">
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-4">Map</h2>
-                    <div id="image-container" class="w-full">
-                        <img class="w-full" id="map" src="static/kinect.png" alt="Map">
-                    </div>
-                    <div id="coordinates">
+                    <div id="nav" class="w-full"></div>
+                    <!-- <div id="coordinates">
                         Point coordinates: <span id="coord-output">None</span>
                     </div>
                     <div class="flex">
@@ -131,7 +129,7 @@
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="navBtn">
                             <i class="fa-solid fa-location-dot mr-2"></i> Navigate
                         </button>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-4">Expression</h2>
@@ -170,5 +168,11 @@
     </main>
 </body>
 <script src="https://cdn.tailwindcss.com"></script>
+<script src="scripts/easeljs.min.js"></script>
+<script src="scripts/eventemitter2.min.js"></script>
+<script src="scripts/roslib.min.js"></script>
+<script src="scripts/ros2d.min.js"></script>
+<script src="scripts/nav2d.min.js"></script>
+<script type="text/javascript" src="scripts/navigation.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 </html>
