--- a/index.html
+++ b/index.html
@@ -121,15 +121,18 @@
                     <div id="nav" class="w-full"></div>
                     <!-- <div id="coordinates">
                         Point coordinates: <span id="coord-output">None</span>
-                    </div>
+                    </div> -->
                     <div class="flex">
-                        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="localizeBtn">
+                        <!-- <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="localizeBtn">
                             <i class="fas fa-arrows-alt mr-2"></i> Localize
                         </button>
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="navBtn">
                             <i class="fa-solid fa-location-dot mr-2"></i> Navigate
+                        </button> -->
+                        <button class="bg-red-500 hover:bg-red-600 text-white py-2 px-4 rounded m-1 flex items-center" id="cancelBtn">
+                            <i class="fa-solid fa-xmark mr-2"></i> Cancel
                         </button>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-xl font-bold mb-4">Expression</h2>
