--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="static/style.css">
     <title>WebSocket Client</title>
 </head>
-<body class="bg-gray-100 text-gray-900" onload="initPage()">
+<body class="bg-gray-100 text-gray-900">
     <header class="bg-gray-700 text-white p-4 flex items-center">
         <h1 class="text-2xl font-bold mr-8">WebSocket Client</h1>
         <div class="flex items-center">
