Added GPT API scaffold

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="navBtn">
                             <i class="fa-solid fa-location-dot mr-2"></i> Navigate
                         </button> -->
-                        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="speechBtn" onclick="promptBuilder()">
+                        <button class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded m-1 flex items-center" id="speechBtn" onclick="promptGPT()">
                             Send
                         </button>
                     </div>
@@ -176,4 +176,5 @@
 <script type="text/javascript" src="scripts/navigation.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <script type="text/javascript" src="scripts/prompt_builder.js"></script>
+<script type="text/javascript" src="scripts/gen_gpt.js"></script>
 </html>
