Refactored file names

--- a/index.html
+++ b/index.html
@@ -175,6 +175,6 @@
 <script src="scripts/nav2d.min.js"></script>
 <script type="text/javascript" src="scripts/navigation.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
-<script type="text/javascript" src="scripts/prompt_builder.js"></script>
-<script type="text/javascript" src="scripts/gen_gpt.js"></script>
+<script type="text/javascript" src="scripts/prompt-builder.js"></script>
+<script type="text/javascript" src="scripts/gen-gpt.js"></script>
 </html>
