Compatibility with ROS Noetic

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="video-container absolute inset-0 flex items-center justify-center">
             <video id="remoteVideo" tabindex="0" autoplay playsinline class="max-w-full h-full outline-none"></video>
 
-            <div id="mapOverlay" class="overlay-map bg-white p-4 rounded shadow">
+            <div id="mapOverlay" class="overlay-map w-1/5 bg-white p-4 rounded shadow">
                 <div id="nav" class="w-full"></div>
                 <!-- <div id="coordinates">
                     Point coordinates: <span id="coord-output">None</span>
