--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static/style.css">
     <title>WebSocket Client</title>
 </head>
@@ -43,7 +42,8 @@
         </div>
     </main>
 </body>
-<script src="https://cdn.tailwindcss.com"></script>
+<!-- <script src="https://cdn.tailwindcss.com"></script> -->
+<script src="scripts/tailwind.js"></script>
 <script src="scripts/easeljs.min.js"></script>
 <script src="scripts/eventemitter2.min.js"></script>
 <script src="scripts/roslib.min.js"></script>
