Added communication with backend VLM server

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <script src="scripts/roslib.min.js"></script>
 <script src="scripts/ros2d.min.js"></script>
 <script src="scripts/nav2d.min.js"></script>
+<script type="text/javascript" src="scripts/vlmaps.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <script type="text/javascript" src="scripts/navigation.js"></script>
 <script type="text/javascript" src="scripts/joystick.js"></script>
