Updated speech navigation code

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
                     </button>
                 </div>
             </div>
+
+            <div class="overlay-textarea bg-white p-4 rounded shadow">
+                <h2 class="text-l font-bold mb-2">Speech</h2>
+                <textarea id="speechText" class="w-full max-w-lg p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" rows="5"></textarea>
+            </div>
         </div>
     </main>
 </body>
@@ -49,10 +54,8 @@
 <script src="scripts/roslib.min.js"></script>
 <script src="scripts/ros2d.min.js"></script>
 <script src="scripts/nav2d.min.js"></script>
-<script type="text/javascript" src="scripts/vlmaps.js"></script>
+<script type="text/javascript" src="scripts/dialogue.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <script type="text/javascript" src="scripts/navigation.js"></script>
 <script type="text/javascript" src="scripts/joystick.js"></script>
-<script type="text/javascript" src="scripts/prompt-builder.js"></script>
-<script type="text/javascript" src="scripts/gen-gpt.js"></script>
 </html>
