--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <script src="scripts/eventemitter2.min.js"></script>
 <script src="scripts/roslib.min.js"></script>
 <script src="scripts/ros2d.min.js"></script>
-<script src="scripts/nav2d.js"></script>
+<script src="scripts/nav2d.min.js"></script>
 <script type="text/javascript" src="scripts/dialogue.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <script type="text/javascript" src="scripts/modal.js"></script>
