Updated speech navigation code

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 </div>
             </div>
 
-            <div class="overlay-textarea bg-white p-4 rounded shadow">
+            <div class="overlay-textarea bg-white w-1/5 p-4 rounded shadow">
                 <h2 class="text-l font-bold mb-2">Speech</h2>
-                <textarea id="speechText" class="w-full max-w-lg p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" rows="5"></textarea>
+                <textarea id="speechText" class="w-full max-w-lg p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" rows="8"></textarea>
             </div>
 
             <div
@@ -73,7 +73,7 @@
 <script src="scripts/eventemitter2.min.js"></script>
 <script src="scripts/roslib.min.js"></script>
 <script src="scripts/ros2d.min.js"></script>
-<script src="scripts/nav2d.min.js"></script>
+<script src="scripts/nav2d.js"></script>
 <script type="text/javascript" src="scripts/dialogue.js"></script>
 <script type="text/javascript" src="scripts/main.js"></script>
 <script type="text/javascript" src="scripts/modal.js"></script>
